# clang-tool

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  FAQ.md  README.md  VERSION.md  test.cpp  test.h
libs/: CMakeLists.txt
libs/clang-include/clang/AST/: AttrDump.inc  AttrImpl.inc  AttrVisitor.inc  Attrs.inc  ClangAttrClasses.vcxproj  ClangAttrClasses.vcxproj.filters  ClangAttrDump.vcxproj  ClangAttrDump.vcxproj.filters  ClangAttrImpl.vcxproj  ClangAttrImpl.vcxproj.filters  ClangAttrVisitor.vcxproj  ClangAttrVisitor.vcxproj.filters  ClangCommentCommandInfo.vcxproj  ClangCommentCommandInfo.vcxproj.filters  ClangCommentCommandList.vcxproj  ClangCommentCommandList.vcxproj.filters  ClangCommentHTMLNamedCharacterReferences.vcxproj  ClangCommentHTMLNamedCharacterReferences.vcxproj.filters  ClangCommentHTMLTags.vcxproj  ClangCommentHTMLTags.vcxproj.filters  ClangCommentHTMLTagsProperties.vcxproj  ClangCommentHTMLTagsProperties.vcxproj.filters  ClangCommentNodes.vcxproj  ClangCommentNodes.vcxproj.filters  ClangDeclNodes.vcxproj  ClangDeclNodes.vcxproj.filters  ClangStmtNodes.vcxproj  ClangStmtNodes.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  StmtNodes.inc  cmake_install.cmake
libs/clang-include/clang/Basic/: AttrHasAttributeImpl.inc  AttrList.inc  ClangARMNeon.vcxproj  ClangARMNeon.vcxproj.filters  ClangAttrHasAttributeImpl.vcxproj  ClangAttrHasAttributeImpl.vcxproj.filters  ClangAttrList.vcxproj  ClangAttrList.vcxproj.filters  ClangDiagnosticAST.vcxproj  ClangDiagnosticAST.vcxproj.filters  ClangDiagnosticAnalysis.vcxproj  ClangDiagnosticAnalysis.vcxproj.filters  ClangDiagnosticComment.vcxproj  ClangDiagnosticComment.vcxproj.filters  ClangDiagnosticCommon.vcxproj  ClangDiagnosticCommon.vcxproj.filters  ClangDiagnosticDriver.vcxproj  ClangDiagnosticDriver.vcxproj.filters  ClangDiagnosticFrontend.vcxproj  ClangDiagnosticFrontend.vcxproj.filters  ClangDiagnosticGroups.vcxproj  ClangDiagnosticGroups.vcxproj.filters  ClangDiagnosticIndexName.vcxproj  ClangDiagnosticIndexName.vcxproj.filters  ClangDiagnosticLex.vcxproj  ClangDiagnosticLex.vcxproj.filters  ClangDiagnosticParse.vcxproj  ClangDiagnosticParse.vcxproj.filters  ClangDiagnosticSema.vcxproj  ClangDiagnosticSema.vcxproj.filters  ClangDiagnosticSerialization.vcxproj  ClangDiagnosticSerialization.vcxproj.filters  DiagnosticCommonKinds.inc  DiagnosticDriverKinds.inc  DiagnosticFrontendKinds.inc  DiagnosticGroups.inc  DiagnosticIndexName.inc  DiagnosticLexKinds.inc  DiagnosticParseKinds.inc  (+6 more)
libs/clang-libs/: LTO.exp  libclang.exp
libs/googlebenchmark/: CMakeLists.txt
libs/googlebenchmark/src/: CMakeLists.txt
(+68 files in other folders)
